Allow overflow when off-canvas is open and position overlay fixed. Fixes issuere page would jump to the top when off-canvas is closed.

--- a/less/components/offcanvas.less
+++ b/less/components/offcanvas.less
@@ -16,8 +16,6 @@
   top: 0;
 
   &.is-open {
-    overflow: hidden;
-
     .OffCanvas-overlay {
       display: block;
     }
@@ -47,7 +45,7 @@
   cursor: pointer;
   display: none;
   left: 0;
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
   z-index: 10;
